  Domain bug fixed, did not copy databaseOperations in copy constructor
  Domain.getForeignKeyReferences() moved to DefaultLocalEntityConnection
  Domain bug fixed, NullPointerException prevented when referencing database operations in a deserialized Domain, plus some minor refactoring
  EntityConnectionUtil renamed to EntityConnections
  DefaultEntityConnectionServer.getRegistryPort() removed
  Sonar run
  DefaultDatabaseConnection, some refactoring
  ResultIterator, javadoc improvements
  EntityConnection.selectDependentEntities() renamed to selectDependencies()
  SwingEntityTableModel.selectDependentEntities() removed
0.12.5
  Plugin modules renamed from jminor-framework-plugins... to jminor-plugin...
  Plugin packages renamed to reflect module names
  Java 8 version now has groupId org.jminor.jdk8
  ServerMonitorPanel, environment info text area now uses word wrap
  Util.PropertyWriter added, getSystemProperties() overloaded with one of these as a parameter
  DefaultEntityConnectionServerAdmin.getSystemProperties() now writes the classpath as one item per line
  DefaultEntity.prepareValue() now strips trailing zeros on BigDecimals as well as setting the scale
  ServiceLoader used throughout
  Minima 2.5.1 Jekyll theme files added to documentation
  CredentialServer.DefaultCredentialsProvider moved up, made ServiceLoader compatible
  CredentialServer moved to new plugin module
  CredentialServer renamed to CredentialsServer along with related classes
  EntityBeanMapper disassembled, functionality moved to Domain
  Domain bean transformation now handles foreign key properties
  FormatUtil renamed to Formats
  DateUtil renamed to Dates
  PropertyStore.writeToFile() parameter is now File instead of String
  EntityConnections.batchInsert() now uses EventDataListener instead of ProgressReporter
  ProgressReporter removed
  AbstractEntityConnectionProvider.onDisconnect() removed, unused