@@ -5244,3 +5244,4 @@
   EntityConnections.batchInsert() now uses EventDataListener instead of ProgressReporter
   ProgressReporter removed
   AbstractEntityConnectionProvider.onDisconnect() removed, unused
+  Some refactoring in common.db.pool
